--- a/simple/src/main/resources/conf.properties
+++ b/simple/src/main/resources/conf.properties
@@ -1,3 +1,3 @@
-client.azureopenai.key:
-client.azureopenai.endpoint:
-client.azureopenai.deploymentname:
+client.azureopenai.key=
+client.azureopenai.endpoint=
+client.azureopenai.deploymentname=
