Add Maven exec plugin

--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.agoncal.sample.semantic-kernel</groupId>
-    <artifactId>simple</artifactId>
-    <version>1.0</version>
-    <name>Semantic Kernel Samples :: Simple</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.agoncal.sample.semantic-kernel</groupId>
+  <artifactId>simple</artifactId>
+  <version>1.0</version>
+  <name>Semantic Kernel Samples :: Simple</name>
 
-    <parent>
+  <parent>
     <groupId>org.agoncal.sample.semantic-kernel</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0</version>
-    </parent>
+    <artifactId>parent</artifactId>
+    <version>1.0</version>
+  </parent>
 
   <dependencies>
     <dependency>
@@ -37,4 +37,15 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>org.agoncal.samples.sk.PasswordRedact</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
