--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -43,7 +43,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <configuration>
-          <mainClass>org.agoncal.samples.sk.PasswordRedact</mainClass>
+          <mainClass>org.agoncal.samples.sk.RedactPassword</mainClass>
         </configuration>
       </plugin>
     </plugins>
