--- a/appcat/src/main/resources/AppCatSkill/AnalyzeWithContext/config.json
+++ b/appcat/src/main/resources/AppCatSkill/AnalyzeWithContext/config.json
@@ -1,9 +1,9 @@
 {
   "schema": 1,
-  "description": "Analyzing an incident with no context.",
+  "description": "Analyzing an application with context: AppCAT incident",
   "type": "completion",
   "completion": {
-    "max_tokens": 1000,
+    "max_tokens": 10000,
     "temperature": 0.1,
     "top_p": 0.0,
     "presence_penalty": 0.0,
