--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <!-- Semantic Kernel -->
-    <version.semantic-kernel>0.2.9-alpha</version.semantic-kernel>
+    <version.semantic-kernel>0.2.10-alpha-SNAPSHOT</version.semantic-kernel>
     <!-- Other -->
     <version.log4j2>2.20.0</version.log4j2>
     <version.junit>5.9.0</version.junit>
@@ -48,24 +48,26 @@
         <groupId>com.microsoft.semantic-kernel</groupId>
         <artifactId>semantickernel-bom</artifactId>
         <version>${version.semantic-kernel}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>com.microsoft.semantic-kernel</groupId>
-        <artifactId>semantickernel-core</artifactId>
-        <version>${version.semantic-kernel}</version>
-        <!-- TODO: scope should be runtime, but VolatileMemoryStore is an issue -->
-        <!-- <scope>runtime</scope> -->
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.semantic-kernel</groupId>
-        <artifactId>semantickernel-planners</artifactId>
-        <version>${version.semantic-kernel}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.microsoft.semantic-kernel</groupId>
-        <artifactId>semantickernel-connectors-ai-openai</artifactId>
-        <version>${version.semantic-kernel}</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>com.microsoft.semantic-kernel</groupId>-->
+<!--        <artifactId>semantickernel-core</artifactId>-->
+<!--        <version>${version.semantic-kernel}</version>-->
+<!--        &lt;!&ndash; TODO: scope should be runtime, but VolatileMemoryStore is an issue &ndash;&gt;-->
+<!--        &lt;!&ndash; <scope>runtime</scope> &ndash;&gt;-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--        <groupId>com.microsoft.semantic-kernel</groupId>-->
+<!--        <artifactId>semantickernel-planners</artifactId>-->
+<!--        <version>${version.semantic-kernel}</version>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--        <groupId>com.microsoft.semantic-kernel</groupId>-->
+<!--        <artifactId>semantickernel-connectors-ai-openai</artifactId>-->
+<!--        <version>${version.semantic-kernel}</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
