--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>semantickernel-connectors-ai-openai</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.microsoft.semantic-kernel</groupId>
+      <artifactId>semantickernel-settings-loader</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
