--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,32 @@
 target/
 *.class
 
-# Log file
+# patch
+*.orig
+*.rej
+
+# Local environment
+.env
+
+# Plugin directory
+/.quarkus/cli/plugins/
+
+# Quinoa
+node_modules/
+build/
+dist/
+.quinoa/
+dist-ssr
+*.local
+
+# Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # BlueJ files
 *.ctxt
