--- a/chat/src/main/webui/package.json
+++ b/chat/src/main/webui/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8000 --host",
+    "dev": "vite",
     "build": "vite build",
     "watch": "vite build --watch --minify false",
     "lint": "lit-analyzer",
